# ma_eval_speed

./: .gitignore  Cargo.toml  README.md  paper.tex  start_update_branches.bat  update-branches.sh
input/pred/bwt_runs/u40/: min0_max17179869183.data  min0_max34359738366.data
input/pred/normal/u40/: min442325416518_max669841943230.data  min442833543493_max654745736569.data  min444905548018_max654036510754.data  min448159496379_max651787896323.data  min448159496379_max654036510754.data  min454792205882_max646930467598.data  min454792205882_max651787896323.data  min459238489532_max646912487676.data  min462407024582_max646912487676.data  min463256531253_max638578578999.data  min472642966042_max636309103155.data  min475732182016_max636309103155.data  min484172336519_max617519688611.data  min484172336519_max636309103155.data  min485670980050_max607532720124.data  min485670980050_max607735582860.data  min492127743897_max607493853381.data  min496298101414_max584564990671.data  min496298101414_max601060875210.data  min519497934950_max584564990671.data  min524091130462_max566180081556.data  min524091130462_max568372514638.data  min524091130462_max584564990671.data
input/pred/normal/u48/: min112558844574609_max168812903977907.data  min114198273643746_max167650617876256.data  min114198273643746_max168812903977907.data  min115481031165997_max167189834540744.data  min116945023623831_max162870001563330.data  min117249501298814_max162870001563330.data  min117271796125924_max161756244924086.data  min118483948167237_max161756244924086.data  (+16 more)
src/: bench.rs  main.rs
(+98 files in other folders)
