[package]
name = "ma_eval_speed"
version = "0.1.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
num = "0.2.0"
criterion = "0.3.0"
uint = { git = "https://github.com/Tockra/uint.git" }
treez = {git = "https://github.com/Tockra/treez"}
ma_titan = { git = "https://github.com/Tockra/ma_titan.git", branch="threshold_16" }